kubernetes/apps/api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ghcr.io/verde-websites/myfpl-api/myfpl-api
        imagePullPolicy: Always #TODO: Change to IfNotPresent
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: github-registry-secret # Ensure you have the correct secret configured for pulling from GitHub registry
