kubernetes/apps/api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: staging
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 80
      targetPort: 8000
